# Unity-Static-Asset-Audit-Agent

./: .env  .gitignore  NEXT_VERSION_AGENT_HARNESS_SPEC.md  README.md  Unity 静态资源审查 Harness MVP 架构说明.docx  pyproject.toml  setup.py
test_project/Assets/Prefabs/: UI_MainPanel.prefab
test_project/Assets/Scenes/: MainScene.unity
tests/: conftest.py
tests/integration/: test_cli_agent.py  test_cli_feedback.py  test_cli_prepare_fixes.py  test_cli_scan.py
tests/unit/: test_agent_fix_plans.py  test_assessment_guardrails.py  test_auto_fix_pipeline.py  test_code_semantics.py  test_default_tools.py  test_evidence.py  test_extractors.py  test_feedback.py  test_fix_planner.py  test_harness_runner.py  test_harness_tools.py  test_meta_parser.py  test_model_client.py  test_multi_agent.py  test_report.py  test_rules.py  test_scanner.py
unity_audit/: __init__.py  cli.py  config.py  evidence.py  fix_planner.py  meta_parser.py  report.py  scanner.py
unity_audit/agents/: __init__.py  audit_agent.py  model_client.py  prompts.py  schemas.py  specialized_prompts.py
unity_audit/application/: __init__.py  audit_service.py  models.py
unity_audit/extractors/: __init__.py  audio.py  prefab_scene.py  shader_material.py  texture.py
unity_audit/harness/: __init__.py  approvals.py  assessment_guardrails.py  auto_fix.py  code_semantics.py  coordinator.py  default_tools.py  feedback.py  policy.py  prefab_tools.py  runner.py  state.py  tools.py  tracing.py  worker.py
unity_audit/rules/: __init__.py  audio_rules.py  engine.py  prefab_rules.py  shader_material_rules.py  texture_rules.py
(+2 files in other folders)
